src/logs/dpralte060b080/build.make.001.log
[  0%] [ 11%] Built target std_msgs_generate_messages_py
Built target dpralte060b080
[ 11%] Built target std_msgs_generate_messages_cpp
[ 11%] Built target _dpralte060b080_generate_messages_check_deps_DPRALTE060B080_Msg
[ 11%] Built target std_msgs_generate_messages_lisp
[ 11%] Built target rosgraph_msgs_generate_messages_lisp
[ 11%] Built target geometry_msgs_generate_messages_cpp
[ 11%] Built target geometry_msgs_generate_messages_lisp
[ 11%] Built target geometry_msgs_generate_messages_py
[ 11%] Built target roscpp_generate_messages_cpp
[ 11%] Built target rosgraph_msgs_generate_messages_py
[ 11%] Built target rosgraph_msgs_generate_messages_cpp
[ 11%] Built target roscpp_generate_messages_py
[ 11%] Built target roscpp_generate_messages_lisp
[ 33%] Built target dpralte060b080_generate_messages_py
[ 44%] Built target dpralte060b080_generate_messages_cpp
[ 55%] Built target dpralte060b080_generate_messages_lisp
[ 55%] Built target dpralte060b080_generate_messages
[ 66%] [ 77%] [32mBuilding CXX object CMakeFiles/igv_DPRALTE060B080.dir/node/igv_teleop_key.cpp.o
[0m[32mBuilding CXX object CMakeFiles/igv_DPRALTE060B080.dir/src/DPRALTE060B080.cpp.o
[0m[100%] Built target igv_Demo
/home/IGV/IGV_ws/src/src/dpralte060b080/node/igv_teleop_key.cpp: In function ‘int main(int, char**)’:
/home/IGV/IGV_ws/src/src/dpralte060b080/node/igv_teleop_key.cpp:135:33: error: ‘class DPRALTE060B080’ has no member named ‘getOdometry_Left’
         Msg.odometry_left = IGV.getOdometry_Left();
                                 ^
/home/IGV/IGV_ws/src/src/dpralte060b080/node/igv_teleop_key.cpp:136:34: error: ‘class DPRALTE060B080’ has no member named ‘getOdometry_Right’
         Msg.odometry_right = IGV.getOdometry_Right();
                                  ^
make[2]: *** [CMakeFiles/igv_DPRALTE060B080.dir/node/igv_teleop_key.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/igv_DPRALTE060B080.dir/all] Error 2
make: *** [all] Error 2
